slide textbg,btn fixes, find us aligning

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
 .hero {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../IMG/jumbo.jpg");
     background-position: center;
@@ -15,4 +16,15 @@
   h1,h2 {
     font-family: 'Bangers', cursive;
     
+  }
+  
+  .fa-brands {
+    color: red;
+  }
+  .social {
+    font-size: x-large;
+  }
+
+  .building {
+    height: 30.5rem;
   }
